--- a/package.json
+++ b/package.json
@@ -3,15 +3,27 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "7.7.4",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@humanyze/react-with-analytics": "https://github.com/Humanyze/react-with-analytics.git#master",
     "@material-ui/core": "^4.9.3",
     "@redux-offline/redux-offline": "^2.5.2",
     "@sentry/browser": "^5.12.0",
+    "@svgr/webpack": "4.3.3",
+    "@typescript-eslint/eslint-plugin": "^2.8.0",
+    "@typescript-eslint/parser": "^2.8.0",
+    "babel-eslint": "10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "8.0.6",
+    "babel-plugin-named-asset-import": "^0.3.5",
+    "babel-preset-react-app": "^9.1.0",
     "browser-detect": "^0.2.28",
+    "camelcase": "^5.3.1",
+    "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chai": "^4.2.0",
     "circular-dependency-plugin": "^5.2.0",
+    "css-loader": "3.2.0",
     "d3": "^5.15.0",
     "d3-array": "^2.4.0",
     "d3-axis": "^1.0.12",
@@ -24,32 +36,59 @@
     "d3-selection": "^1.4.1",
     "d3-shape": "1.3.7",
     "d3-time-format": "^2.2.3",
+    "dotenv": "8.2.0",
+    "dotenv-expand": "5.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.6.0",
     "eslint-config-humanyze": "^1.0.4",
+    "eslint-config-react-app": "^5.1.0",
+    "eslint-loader": "3.0.2",
+    "eslint-plugin-flowtype": "3.13.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "fast-memoize": "^2.5.1",
+    "file-loader": "4.3.0",
+    "fs-extra": "^8.1.0",
+    "html-webpack-plugin": "4.0.0-beta.5",
     "html2canvas": "^1.0.0-rc.5",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "24.9.0",
+    "jest-environment-jsdom-fourteen": "0.1.0",
+    "jest-resolve": "24.9.0",
+    "jest-watch-typeahead": "0.4.2",
     "js-file-download": "^0.4.9",
     "lodash.isequal": "^4.5.0",
     "lodash.size": "^4.2.0",
     "match-sorter": "^4.0.2",
     "material-icons-react": "^1.0.4",
+    "mini-css-extract-plugin": "0.8.0",
     "moment-locales-webpack-plugin": "^1.1.2",
     "normalize-scss": "^7.0.1",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
     "papaparse": "^5.1.1",
     "pluralize": "^8.0.0",
+    "pnp-webpack-plugin": "1.5.0",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "8.0.1",
+    "postcss-preset-env": "6.7.0",
+    "postcss-safe-parser": "4.0.1",
     "rc-tooltip": "^4.0.0-alpha.3",
     "react": "^16.12.0",
+    "react-app-polyfill": "^1.0.5",
     "react-app-rewired": "^2.1.5",
     "react-datepicker": "^2.11.0",
     "react-dates": "^21.5.1",
+    "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-ga": "^2.7.0",
     "react-moment-proptypes": "^1.7.0",
     "react-pose": "^4.0.10",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
     "react-scroll-into-view-if-needed": "^2.1.7",
     "react-sortable-hoc": "^1.11.0",
     "react-table": "^7.0.0-rc.15",
@@ -64,15 +103,27 @@
     "redux-thunk": "^2.3.0",
     "require-context.macro": "^1.2.2",
     "reselect": "^4.0.0",
-    "styled-components": "^4.4.1"
+    "resolve": "1.12.2",
+    "resolve-url-loader": "3.1.1",
+    "sass": "^1.25.0",
+    "sass-loader": "^8.0.1",
+    "semver": "6.3.0",
+    "style-loader": "1.0.0",
+    "styled-components": "^4.4.1",
+    "terser-webpack-plugin": "2.2.1",
+    "ts-pnp": "1.1.5",
+    "url-loader": "2.3.0",
+    "webpack": "4.41.2",
+    "webpack-dev-server": "3.9.0",
+    "webpack-manifest-plugin": "2.2.0",
+    "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "start": "PORT=3001 react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "test:container": "react-app-rewired test --env=jsdom --runInBand",
-    "test:debug": "react-app-rewired test --inspect-brk --runInBand --no-cache --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "PORT=3000 node scripts/start",
+    "build": "node scripts/build",
+    "test": "node scripts/test --env=jsdom",
+    "test:container": "node scripts/test --env=jsdom --runInBand",
+    "test:debug": "node --inspect-brk scripts/test --runInBand --no-cache --env=jsdom",
     "storybook": "./cscripts/storybook",
     "storybook:container": "start-storybook -p 9003 -c .storybook -s ./public --ci",
     "build-storybook": "build-storybook -c .storybook -o .out",
@@ -82,12 +133,40 @@
     "extends": "eslint-config-humanyze"
   },
   "jest": {
+    "roots": [
+      "<rootDir>/src"
+    ],
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,mjs}",
       "!src/**/*.story.js",
       "!src/tests/**"
     ],
+    "setupFiles": [
+      "react-app-polyfill/jsdom"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
+      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
+    ],
+    "testEnvironment": "jest-environment-jsdom-fourteen",
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
+      "^.+\\.module\\.(css|sass|scss)$"
+    ],
+    "modulePaths": [
+      "/Users/mark/dev/humanyze/client-docker/deployment-dashboard/src"
+    ],
     "moduleNameMapper": {
+      "^react-native$": "react-native-web",
+      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy",
       "^Common(.*)$": "<rootDir>/src/components/common$1",
       "^appPackageJson": "<rootDir>/package.json",
       "^Src(.*)$": "<rootDir>/src$1",
@@ -99,7 +178,23 @@
       "^TestUtils(.*)$": "<rootDir>/src/tests$1",
       "^ElementsWebCommon(.*)$": "<rootDir>/src/elements-web-common$1",
       "^RouterPaths": "<rootDir>/src/routerPaths.js"
-    }
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "web.ts",
+      "ts",
+      "web.tsx",
+      "tsx",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node"
+    ],
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
+    ]
   },
   "browserslist": {
     "production": [
@@ -124,9 +219,15 @@
     "@storybook/preset-create-react-app": "^1.5.2",
     "@storybook/react": "^5.3.0",
     "namor": "^2.0.2",
-    "node-sass": "^4.13.0",
     "sass-loader": "^8.0.1",
     "storybook": "^5.3.0",
     "storybook-react-router": "^1.0.8"
+  },
+  "babel": {
+    "presets": [
+      "react-app",
+      "@babel/react",
+      "@babel/env"
+    ]
   }
 }
