--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "deployment-dashboard",
-  "version": "0.2.0",
+  "version": "1.2.0",
   "private": true,
+  "homepage": "http://localhost:81/deployments",
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/react-fontawesome": "^0.1.8",
@@ -34,6 +35,7 @@
     "dotenv-expand": "5.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "3.4.3",
     "eslint": "^6.6.0",
     "eslint-config-humanyze": "^1.0.4",
     "eslint-config-react-app": "^5.1.0",
@@ -84,6 +86,8 @@
     "react-sizeme": "^2.6.12",
     "react-sortable-hoc": "^1.11.0",
     "react-table": "^7.0.0-rc.15",
+    "react-test-renderer": "^16.13.0",
+    "react-url-query": "^1.5.0",
     "react-virtualized": "^9.21.2",
     "react-window": "^1.8.5",
     "recompose": "^0.30.0",
@@ -112,13 +116,13 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "start": "PORT=3000 PUBLIC_URL=/deployment node scripts/start",
+    "start": "PORT=3000 PUBLIC_URL=/deployments node scripts/start",
     "build": "node scripts/build",
     "test": "node scripts/test --env=jsdom",
     "test:container": "node scripts/test --env=jsdom --runInBand --coverage --collectCoverageFrom  src/",
     "test:debug": "node --inspect-brk scripts/test --runInBand --no-cache --env=jsdom  --coverage --collectCoverageFrom  src/",
     "storybook": "./cscripts/storybook",
-    "storybook:container": "start-storybook -p 9003 -c .storybook -s ./public --ci",
+    "storybook:container": "start-storybook --port 9003 --config-dir .storybook --static-dir ./public --ci",
     "build-storybook": "build-storybook -c .storybook -o .out",
     "common-docs": "jsdoc -c ./src/components/common/jsdoc.conf ./src/components/common/ -r -d ./src/components/common/docs"
   },
@@ -139,28 +143,34 @@
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
+    "@emotion/styled": "^10.0.27",
     "@sambego/storybook-state": "^2.0.1",
-    "@storybook/addon-actions": "^5.3.9",
+    "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-console": "^1.2.1",
-    "@storybook/addon-knobs": "^5.3.0",
-    "@storybook/addon-links": "^5.3.4",
-    "@storybook/addon-storyshots": "^5.3.0",
-    "@storybook/addon-viewport": "^5.3.0",
+    "@storybook/addon-knobs": "^5.3.14",
+    "@storybook/addon-links": "^5.3.14",
+    "@storybook/addon-storyshots": "^5.3.14",
+    "@storybook/addon-viewport": "^5.3.14",
     "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.0",
+    "@storybook/react": "^5.3.14",
     "babel-eslint": "10.0.3",
     "babel-jest": "^25.1.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react-app": "^9.1.0",
+    "emotion-theming": "^10.0.27",
     "jest": "^25.1.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "^25.1.0",
     "jest-watch-typeahead": "0.4.2",
     "namor": "^2.0.2",
+    "react-popper-tooltip": "^2.10.1",
+    "react-syntax-highlighter": "^12.2.1",
+    "react-textarea-autosize": "^7.1.2",
     "sass-loader": "^8.0.1",
-    "storybook": "^5.3.0",
+    "simplebar-react": "^2.1.0",
+    "storybook": "^5.3.14",
     "storybook-react-router": "^1.0.8"
   }
 }
